# 4342-asl-recognition

./: .gitignore  CNN.txt  GestureDataset.py  LSQ.py  README.md  asl.pth  camera.py  cnn.py  cnn_pruning.ipynb  cnn_quantized.py  graph.ipynb  preprocess.ipynb  resnet.py  sensitivity_scan.txt  tvm_deployment.py  tvm_export.py  utils.py
.github/workflows/: latex.yml  push.yml
GestureDataset/GestureDataset.egg-info/: top_level.txt
latex/: .gitignore
latex/literature_review/: applications.tex  main.tex  nvidia-a100.tex  performance.tex  refs.tex  tpu.tex
latex/template/: IEEEtran.cls  conference_101719.tex
misc/: background_filter.ipynb  common colors.ipynb  common_colors.py
misc/temp/: CNN.txt  CNN_Quantized.txt
mnn_deployment/: mnn_camera.py  mnn_deploy.py  mnn_deployment.py  mnn_export.py
mnn_deployment/mnn_out/: model.mnn  model.onnx
ncnn_deployment/: CMakeLists.txt  convert.py  ncnn  ncnn.cpp  ncnn.ipynb  run.sh
ncnn_deployment/ncnn_out/: model.onnx  model.param
ncnn_out/: resnet18-sim.onnx  resnet18.onnx
rock-paper-scissors/: rock_paper_scissors_test.csv  tfds_to_csv.ipynb
tvm_deployment/: tvm_camera.py  tvm_deployment.py  tvm_export.py
tvm_deployment/tvm_out/: graph.json  model.onnx  model.tar  params.params
weights/: asl.pth  asl_quant.pth  cnn_pruned_weights.pth  cnn_quant_steps.pth  cnn_quant_weights.pth
weights/mnist-sign-language/: cnn_pruned_weights.pth  cnn_quant_steps.pth  cnn_quant_weights.pth  model.pth  model_quant.pth
weights/rock-paper-scissors/: cnn_pruned_weights.pth  cnn_quant_steps.pth  cnn_quant_weights.pth  model.pth  (+1 more)
